--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "@reduxjs/toolkit": "^2.6.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "foundation-sites": "^6.9.0",
     "framer-motion": "^12.4.7",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
     "redux": "^5.0.1",
     "redux-saga": "^1.3.0",
-    "sass": "^1.85.0"
+    "sass": "^1.85.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
@@ -28,6 +30,7 @@
     "@types/jest": "^29.5.14",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.19.0",
     "eslint-plugin-react-hooks": "^5.0.0",
